addShutdownHook钩子函数，+协程状态打印